# noloco

./: README.md  pyproject.toml
configs/no_reduce_exp/C4/: c4_base.yaml  c4_base_100m.yaml  c4_base_1b.yaml  c4_base_7b.yaml  c4_diloco_100m_8.yaml  c4_diloco_mean_100m_8.yaml  c4_dipaco_100m_16.yaml  c4_dipaco_100m_8.yaml  c4_dipaco_1b_16.yaml  c4_dipaco_1b_32.yaml  c4_dipaco_1b_64.yaml  c4_dipaco_7b_64.yaml  c4_dipaco_mean_100m_16.yaml  c4_dipaco_mean_100m_32.yaml  c4_dipaco_mean_100m_8.yaml  c4_dipaco_mean_1b_16.yaml  c4_dipaco_mean_1b_32.yaml  c4_dipaco_mean_1b_64.yaml  c4_dipaco_mean_1b_64_2m.yaml  c4_dipaco_mean_7b_64.yaml  c4_fsdp_100m.yaml  c4_fsdp_1b.yaml  c4_fsdp_1b_batch_2m.yaml  c4_fsdp_7b.yaml  c4_noloco_100m_16.yaml  c4_noloco_100m_8.yaml  c4_noloco_1b_32.yaml  c4_noloco_1b_64.yaml  c4_noloco_7b_64.yaml  c4_noloco_mean_100m_8.yaml  c4_noloco_mean_1b_32.yaml  c4_noloco_mean_1b_64_2m.yaml  c4_noloco_mean_7b_64.yaml
configs/no_reduce_exp/reddit/: baseline_100m.yaml  baseline_1b.yaml  baseline_7b.yaml  diloco_100m_8.yaml  diloco_mean_100m_8.yaml  dipaco_100m_16.yaml  dipaco_100m_8.yaml  (+19 more)
scripts/: run.sh
src/dipaco/: c4_data_loader.py  create_process_groups.py  dipaco_pipeline.py  dp_optimizer.py  llama_to_transformer_engine.py  pipeline_diloco_optimizer.py  pipeline_llama.py  sparse_optimizer.py  sparse_optimizer_c.py
src/noloco/: btm_utils.py  data_parallel_optimizer.py  llama.py  local_optimizer.py  pipeline_llama.py  sparse_optimizer_b.py  train.py  weight_strategies.py
src/weighted_diloco/: data_loaders.py  diloco_optimizer.py  schedulers.py  train.py
