[project]
name = "weighted_diloco"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Gensyn Administrator", email = "admin@gensyn.ai" },
    {name = "oguzhanersoy", email = "oguzer2006@gmail.com"},
]
dependencies = [
    "pyarrow",
    "tensorboard",
    # "skypilot[kubernetes]>=0.8.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
	"tensorboard",
]

build = [
	"maturin>=1.4.0",
	"pip>=23.3.2",
]

[tool.pytest.ini_options]
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)-.1s (%(filename)s:%(lineno)s) %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [ "./tests/unit/test_profiler.py" ]
filterwarnings = [ "ignore::DeprecationWarning::", "ignore::UserWarning::" ]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.isort]
# The profile needs to match `black` or else `ruff` may disagree.
#
# Also see https://github.com/PyCQA/isort/issues/1518
profile = "black"
known_first_party = [ "gensyn" ]

[tool.ruff.lint]
# extra rules to add on top of the default ruff rule set.
extend-select = [ "ARG001" ]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in all `__init__.py` files
"__init__.py" = [ "F401" ]
